# Snake

./: CMakeLists.txt  CMakeLists.txt.user.7061d40  README.md
src/: Board.cpp  Board.h  CMakeLists.txt  DrawingHelper.cpp  DrawingHelper.h  Maths.cpp  Maths.h  Position.h  Snake.cpp  Snake.h  general.cpp  general.h  main.cpp  snake.cpp
test/: CMakeLists.txt  testBoard.cpp  testMaths.cpp  testSnake.cpp
